# dbt-metric-utils

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: check_test.yml  publish.yml  publish_gh_page.yml
assets/: how_it_works.excalidraw
jaffle-shop/: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
jaffle-shop/macros/: dbt_metric_utils_materialize.sql
jaffle-shop/models/: overview.md
jaffle-shop/models/marts/materialized_metrics/: customer_orders.sql  order_metrics.sql  revenue_metrics.sql
src/dbt_metric_utils/: cli.py  cli_old.py  helpers.py  materialize_metrics.py
src/dbt_utils/: __init__.py  cli.py  dbt_metric_utils_materialize.sql  dbt_utils_metric_materialize.sql  materialize_metrics.py
tests/: test_extraction_of_materialize_calls.py  test_materialize_macro.py
