[project]
name = "dbt-metric-utils"
dynamic = ["version"]
description = "Utilities for dbt metrics."
authors = [
    { name = "Diederik Jan Lemkes", email = "dj.lemkes@gmail.com" }
]
dependencies = [
    "dbt-core>=1.6.0",
    "dbt-metricflow>=0.6.0",
    "click>=7.1",
    "yaspin>=2",
    "regex>=2024.11.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dbt-metric-utils = 'dbt_metric_utils.cli:cli'
dbtmu = 'dbt_metric_utils.cli:cli'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
python = "3.8"
dev-dependencies = [
    "ruff==0.5.6",
    "Jinja2>=3.1.2,<4",
    "pytest>=8.3.3",
]

[tool.rye.scripts]
test = { cmd = "pytest tests" }
fmt = { cmd = "ruff format --check" }
lint = { cmd = "ruff check" }
fmt-fix = { cmd = "ruff format" }
lint-fix = { cmd = "ruff check --fix" }
checks = { chain = ["fmt", "lint", "test"] }
checks-fix = { chain = ["fmt-fix", "lint-fix"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_metric_utils"]

[tool.hatch.version]
path = "src/dbt_metric_utils/__init__.py"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
# Extend default config with Isort.
select = ["E4", "E7", "E9", "F", "I"]
